Closed Bug 1541925 Opened 5 years ago Closed 5 years ago

Very frequent Assertion failure: GetPresContext() (How did they get dirty?), at z:/build/build/src/layout/style/ServoStyleSet.cpp:1258 when Gecko 68 merges to Beta on 2019-05-06

Categories

(Core :: CSS Parsing and Computation, defect, P2)

defect

Tracking

()

VERIFIED FIXED
mozilla68
Tracking Status
firefox-esr60 --- unaffected
firefox66 --- unaffected
firefox67 --- unaffected
firefox68 --- verified

People

(Reporter: CosminS, Assigned: emilio)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

[Tracking Requested - why for this release]:

Central as Beta simulation:
https://treeherder.mozilla.org/#/jobs?repo=try&revision=d71d7b6e68ea9dbc465c9da13913c331c22dad4c&searchStr=windows%2C10%2Cx64%2Cdebug%2Cmochitests%2Cwith%2Ce10s%2Ctest-windows10-64%2Fdebug-mochitest-browser-chrome-e10s-7%2Cm-e10s%28bc7%29&selectedJob=238144619

Failure log: https://treeherder.mozilla.org/logviewer.html#/jobs?job_id=238144619&repo=try&lineNumber=10246

14:00:20 INFO - TEST-OK | browser/base/content/test/tabs/browser_tabContextMenu_keyboard.js | took 595ms
14:00:20 INFO - GECKO(6028) | ++DOCSHELL 00000163BC047000 == 4 [pid = 4652] [id = {0c498fbd-dc40-42aa-821f-c450ee888e0a}]
14:00:20 INFO - GECKO(6028) | ++DOMWINDOW == 16 (00000163BC3E3D40) [pid = 4652] [serial = 196] [outer = 0000000000000000]
14:00:20 INFO - GECKO(6028) | ++DOMWINDOW == 17 (00000163BC025400) [pid = 4652] [serial = 197] [outer = 00000163BC3E3D40]
14:00:20 INFO - checking window state
14:00:21 INFO - TEST-START | browser/base/content/test/tabs/browser_tabReorder.js
14:00:21 INFO - GECKO(6028) | ++DOCSHELL 000002890F8C7000 == 19 [pid = 3940] [id = {6c33cb7e-741f-4e10-a87d-4e08d654282a}]
14:00:21 INFO - GECKO(6028) | ++DOMWINDOW == 35 (0000028974AD3100) [pid = 3940] [serial = 57] [outer = 0000000000000000]
14:00:21 INFO - GECKO(6028) | ++DOMWINDOW == 36 (0000028978DC4C00) [pid = 3940] [serial = 58] [outer = 0000028974AD3100]
14:00:21 INFO - GECKO(6028) | ++DOCSHELL 00000289682AE000 == 20 [pid = 3940] [id = {0119e233-8750-4748-9f0d-9e8d14cb838d}]
14:00:21 INFO - GECKO(6028) | ++DOMWINDOW == 37 (0000028978102020) [pid = 3940] [serial = 59] [outer = 0000000000000000]
14:00:21 INFO - GECKO(6028) | --DOMWINDOW == 18 (000001DA2AE47C00) [pid = 5104] [serial = 28] [outer = 0000000000000000] [url = about:blank]
14:00:21 INFO - GECKO(6028) | --DOMWINDOW == 17 (000001DA2C22C400) [pid = 5104] [serial = 25] [outer = 0000000000000000] [url = http://example.com/]
14:00:21 INFO - GECKO(6028) | --DOMWINDOW == 16 (000001DA2D37AC00) [pid = 5104] [serial = 34] [outer = 0000000000000000] [url = about:blank]
14:00:21 INFO - GECKO(6028) | --DOMWINDOW == 15 (000001DA2D37D000) [pid = 5104] [serial = 37] [outer = 0000000000000000] [url = about:blank]
14:00:21 INFO - GECKO(6028) | --DOMWINDOW == 14 (000001DA2D53D000) [pid = 5104] [serial = 40] [outer = 0000000000000000] [url = about:blank]
14:00:21 INFO - GECKO(6028) | --DOMWINDOW == 13 (000001DA2D544800) [pid = 5104] [serial = 43] [outer = 0000000000000000] [url = about:blank]
14:00:21 INFO - GECKO(6028) | ++DOMWINDOW == 38 (0000028979E2E000) [pid = 3940] [serial = 60] [outer = 0000028978102020]
14:00:21 INFO - GECKO(6028) | ++DOCSHELL 0000028973EDB000 == 21 [pid = 3940] [id = {3215a1bc-d540-4929-a621-2975f93a390b}]
14:00:21 INFO - GECKO(6028) | ++DOMWINDOW == 39 (0000028974A17A60) [pid = 3940] [serial = 61] [outer = 0000000000000000]
14:00:21 INFO - GECKO(6028) | ++DOMWINDOW == 40 (0000028979E35C00) [pid = 3940] [serial = 62] [outer = 0000028974A17A60]
14:00:21 INFO - GECKO(6028) | --DOMWINDOW == 4 (0000023BAB245800) [pid = 6088] [serial = 20] [outer = 0000000000000000] [url = about:blank]
14:00:21 INFO - GECKO(6028) | --DOMWINDOW == 3 (0000023BAAE42400) [pid = 6088] [serial = 17] [outer = 0000000000000000] [url = about:blank]
14:00:21 INFO - GECKO(6028) | --DOMWINDOW == 2 (0000023BAB794400) [pid = 6088] [serial = 23] [outer = 0000000000000000] [url = about:blank]
14:00:21 INFO - GECKO(6028) | --DOMWINDOW == 1 (0000023BAB798400) [pid = 6088] [serial = 29] [outer = 0000000000000000] [url = about:blank]
14:00:21 INFO - GECKO(6028) | --DOMWINDOW == 0 (0000023BAB796400) [pid = 6088] [serial = 26] [outer = 0000000000000000] [url = about:blank]
14:00:21 INFO - GECKO(6028) | [Parent 3940, Main Thread] WARNING: NS_ENSURE_TRUE(scrollFrame) failed: file z:/build/build/src/dom/base/nsDOMWindowUtils.cpp, line 1511
14:00:21 INFO - GECKO(6028) | ++DOMWINDOW == 41 (0000028979E2D000) [pid = 3940] [serial = 63] [outer = 0000028974AD3100]
14:00:21 INFO - GECKO(6028) | ++DOMWINDOW == 42 (000002897CA44000) [pid = 3940] [serial = 64] [outer = 0000028978102020]
14:00:21 INFO - GECKO(6028) | ++DOMWINDOW == 43 (000002897DCB5C00) [pid = 3940] [serial = 65] [outer = 0000028974A17A60]
14:00:21 INFO - GECKO(6028) | [Parent 3940, StreamTrans #3] WARNING: 'NS_FAILED(rv)', file z:/build/build/src/modules/libjar/nsJARChannel.cpp, line 371
14:00:21 INFO - GECKO(6028) | [Parent 3940, Main Thread] WARNING: NS_ENSURE_SUCCESS(rv, rv) failed with result 0x80520012: file z:/build/build/src/modules/libjar/nsJARChannel.cpp, line 994
14:00:21 INFO - GECKO(6028) | [Parent 3940, StreamTrans #4] WARNING: 'NS_FAILED(rv)', file z:/build/build/src/modules/libjar/nsJARChannel.cpp, line 371
14:00:21 INFO - GECKO(6028) | --DOCSHELL 000001DA2B121000 == 5 [pid = 5104] [id = {db11e224-f1a1-4e39-9df7-1a3f48db9810}] [url = file:///Z:/task_1554385685/build/tests/mochitest/browser/browser/base/content/test/tabs/dummy_page.html]
14:00:21 INFO - GECKO(6028) | --DOMWINDOW == 12 (000001DA296E9B60) [pid = 5104] [serial = 23] [outer = 0000000000000000] [url = http://example.org/]
14:00:21 INFO - GECKO(6028) | [Parent 3940, Main Thread] WARNING: NS_ENSURE_SUCCESS(rv, rv) failed with result 0x80520012: file z:/build/build/src/modules/libjar/nsJARChannel.cpp, line 994
14:00:21 INFO - GECKO(6028) | --DOMWINDOW == 31 (000001D685BF9A60) [pid = 9260] [serial = 139] [outer = 0000000000000000] [url = about:blank]
14:00:21 INFO - GECKO(6028) | --DOMWINDOW == 30 (000001D688A296A0) [pid = 9260] [serial = 130] [outer = 0000000000000000] [url = about:blank]
14:00:21 INFO - GECKO(6028) | --DOMWINDOW == 29 (000001D685BF8F20) [pid = 9260] [serial = 124] [outer = 0000000000000000] [url = about:blank]
14:00:21 INFO - GECKO(6028) | --DOMWINDOW == 28 (000001D685BF94C0) [pid = 9260] [serial = 136] [outer = 0000000000000000] [url = about:blank]
14:00:21 INFO - GECKO(6028) | --DOMWINDOW == 27 (000001D688A055C0) [pid = 9260] [serial = 127] [outer = 0000000000000000] [url = about:blank]
14:00:21 INFO - GECKO(6028) | --DOMWINDOW == 26 (000001D688AF35C0) [pid = 9260] [serial = 133] [outer = 0000000000000000] [url = about:blank]
14:00:21 INFO - GECKO(6028) | --DOCSHELL 000001D688E0A800 == 12 [pid = 9260] [id = {23843f8c-570a-4a85-905d-25c337a7ab68}] [url = about:blank]
14:00:21 INFO - GECKO(6028) | --DOCSHELL 000001D688E14800 == 11 [pid = 9260] [id = {54c39ba5-4a66-4e98-b029-fca80cdf17c4}] [url = about:blank]
14:00:21 INFO - GECKO(6028) | --DOCSHELL 000001D688ECE000 == 10 [pid = 9260] [id = {52ca350b-06b7-4725-bcc1-9feaf70e5e9e}] [url = about:blank]
14:00:21 INFO - GECKO(6028) | --DOCSHELL 000001D688ED4800 == 9 [pid = 9260] [id = {fafcce72-bd9d-4cdb-ad9a-cc71afdd4fe7}] [url = about:blank]
14:00:21 INFO - GECKO(6028) | --DOCSHELL 000001D687396000 == 8 [pid = 9260] [id = {cad9ac88-6b02-4110-ba49-028ffd50e1b0}] [url = about:blank]
14:00:21 INFO - GECKO(6028) | --DOCSHELL 000001D688E07800 == 7 [pid = 9260] [id = {837a4ccf-399d-442d-a85f-f08361a0c6d4}] [url = about:blank]
14:00:21 INFO - GECKO(6028) | [Parent 3940, Main Thread] WARNING: NS_ENSURE_TRUE(scrollFrame) failed: file z:/build/build/src/dom/base/nsDOMWindowUtils.cpp, line 1511
14:00:21 INFO - GECKO(6028) | ++DOCSHELL 000001D687393800 == 8 [pid = 9260] [id = {bb287a51-8347-4a01-a906-3e9c7c239676}]
14:00:21 INFO - GECKO(6028) | ++DOMWINDOW == 27 (000001D685BF87A0) [pid = 9260] [serial = 160] [outer = 0000000000000000]
14:00:21 INFO - GECKO(6028) | ++DOMWINDOW == 28 (000001D687644C00) [pid = 9260] [serial = 161] [outer = 000001D685BF87A0]
14:00:21 INFO - GECKO(6028) | ++DOMWINDOW == 29 (000001D68764D400) [pid = 9260] [serial = 162] [outer = 000001D685BF87A0]
14:00:21 INFO - GECKO(6028) | --DOCSHELL 00000217D10A4000 == 12 [pid = 10232] [id = {1b691507-528f-4b0c-a521-1097795b7226}] [url = about:blank]
14:00:21 INFO - GECKO(6028) | --DOCSHELL 00000217C904C000 == 11 [pid = 10232] [id = {e9f85607-0a3b-41c0-b1fa-143589d21bc8}] [url = about:blank]
14:00:21 INFO - GECKO(6028) | --DOCSHELL 00000217D21B6800 == 10 [pid = 10232] [id = {7870b7ea-3073-42e8-bcc5-fcbf9c1e7676}] [url = about:blank]
14:00:21 INFO - GECKO(6028) | --DOCSHELL 00000217D21AB800 == 9 [pid = 10232] [id = {61387e3c-67cd-4b48-aeac-cadda6612190}] [url = about:blank]
14:00:21 INFO - GECKO(6028) | --DOCSHELL 00000217D10AD000 == 8 [pid = 10232] [id = {efd5034f-3630-4c9f-8e8d-a97a486c17b3}] [url = about:blank]
14:00:21 INFO - GECKO(6028) | --DOCSHELL 00000217C904F000 == 7 [pid = 10232] [id = {d81f8367-95a5-4a0b-b1f0-0026bc36d7ff}] [url = about:blank]
14:00:21 INFO - GECKO(6028) | --DOCSHELL 00000217D10A2000 == 6 [pid = 10232] [id = {91c900b1-b8b0-4162-908c-8fceb8579e8a}] [url = data:text/html;charset=utf-8,<a href="http://mochi.test:8888/" target="_blank" id="link">link</a>]
14:00:21 INFO - GECKO(6028) | --DOCSHELL 00000217D10B1000 == 5 [pid = 10232] [id = {2008662d-5761-4e7b-ac22-1ac2cfffa6de}] [url = about:blank]
14:00:21 INFO - GECKO(6028) | --DOMWINDOW == 28 (00000217D0ADDC40) [pid = 10232] [serial = 31] [outer = 0000000000000000] [url = about:blank]
14:00:21 INFO - GECKO(6028) | --DOMWINDOW == 27 (00000217CEFF1020) [pid = 10232] [serial = 28] [outer = 0000000000000000] [url = about:blank]
14:00:21 INFO - GECKO(6028) | --DOMWINDOW == 26 (00000217D103E880) [pid = 10232] [serial = 40] [outer = 0000000000000000] [url = about:blank]
14:00:21 INFO - GECKO(6028) | --DOMWINDOW == 25 (00000217D0AEFF20) [pid = 10232] [serial = 37] [outer = 0000000000000000] [url = about:blank]
14:00:21 INFO - GECKO(6028) | --DOMWINDOW == 24 (00000217D214C5C0) [pid = 10232] [serial = 34] [outer = 0000000000000000] [url = about:blank]
14:00:21 INFO - GECKO(6028) | --DOMWINDOW == 23 (00000217CEFF17A0) [pid = 10232] [serial = 43] [outer = 0000000000000000] [url = about:blank]
14:00:21 INFO - GECKO(6028) | --DOMWINDOW == 22 (00000217CEFF1D40) [pid = 10232] [serial = 46] [outer = 0000000000000000] [url = data:text/html;charset=utf-8,<a href="http://mochi.test:8888/" target="_blank" id="link">link</a>]
14:00:21 INFO - GECKO(6028) | --DOMWINDOW == 21 (00000217CEFF2100) [pid = 10232] [serial = 49] [outer = 0000000000000000] [url = about:blank]
14:00:21 INFO - GECKO(6028) | Assertion failure: GetPresContext() (How did they get dirty?), at z:/build/build/src/layout/style/ServoStyleSet.cpp:1258
14:00:21 INFO - GECKO(6028) | #01: mozilla::dom::Document::FlushUserFontSet() [dom/base/Document.cpp:11828]
14:00:21 INFO -
14:00:21 INFO - GECKO(6028) | #02: nsDocLoader::DocLoaderIsEmpty(bool) [uriloader/base/nsDocLoader.cpp:655]
14:00:21 INFO -
14:00:21 INFO - GECKO(6028) | #03: nsDocLoader::OnStopRequest(nsIRequest *,nsresult) [uriloader/base/nsDocLoader.cpp:599]
14:00:21 INFO -
14:00:21 INFO - GECKO(6028) | #04: mozilla::net::nsLoadGroup::RemoveRequest(nsIRequest *,nsISupports *,nsresult) [netwerk/base/nsLoadGroup.cpp:568]
14:00:21 INFO -
14:00:21 INFO - GECKO(6028) | #05: mozilla::net::nsLoadGroup::Cancel(nsresult) [netwerk/base/nsLoadGroup.cpp:224]
14:00:21 INFO -
14:00:21 INFO - GECKO(6028) | #06: nsDocLoader::Stop() [uriloader/base/nsDocLoader.cpp:229]
14:00:21 INFO -
14:00:21 INFO - GECKO(6028) | #07: nsDocShell::Stop(unsigned int) [docshell/base/nsDocShell.cpp:4682]
14:00:21 INFO -
14:00:21 INFO - GECKO(6028) | #08: nsDocShell::Destroy() [docshell/base/nsDocShell.cpp:4952]
14:00:21 INFO -
14:00:21 INFO - GECKO(6028) | #09: nsFrameLoader::DestroyDocShell() [dom/base/nsFrameLoader.cpp:1762]
14:00:21 INFO -
14:00:21 INFO - GECKO(6028) | #10: nsFrameLoaderDestroyRunnable::Run() [dom/base/nsFrameLoader.cpp:1703]
14:00:21 INFO -
14:00:21 INFO - GECKO(6028) | #11: mozilla::dom::Document::MaybeInitializeFinalizeFrameLoaders() [dom/base/Document.cpp:6136]
14:00:21 INFO -
14:00:21 INFO - GECKO(6028) | #12: mozilla::dom::Document::EndUpdate() [dom/base/Document.cpp:4708]
14:00:21 INFO -
14:00:21 INFO - GECKO(6028) | #13: nsINode::RemoveChildNode(nsIContent *,bool) [dom/base/nsINode.cpp:1785]
14:00:21 INFO -
14:00:21 INFO - GECKO(6028) | #14: nsINode::RemoveChild(nsINode &,mozilla::ErrorResult &) [dom/base/nsINode.cpp:507]
14:00:21 INFO -
14:00:21 INFO - GECKO(6028) | #15: nsINode::Remove() [dom/base/nsINode.cpp:1642]
14:00:21 INFO -
14:00:21 INFO - GECKO(6028) | #16: static bool mozilla::dom::Element_Binding::remove(struct JSContext *, class JS::Handle<JSObject *>, class mozilla::dom::Element *, const class JSJitMethodCallArgs & const) [s3:gecko-generated-sources-l1:35614b292ec06c64e43f5791cd9253f7de21794b747e4ece4c64505524d6a3e07fad785ccddaeb52fb0ab99893c74f617f01763bde0fe0793816475d58d4da33/dom/bindings/ElementBinding.cpp::5125]
14:00:21 INFO -
14:00:21 INFO - GECKO(6028) | #17: mozilla::dom::binding_detail::GenericMethod<mozilla::dom::binding_detail::NormalThisPolicy,mozilla::dom::binding_detail::ThrowExceptions>(JSContext *,unsigned int,JS::Value *) [dom/bindings/BindingUtils.cpp:3152]
14:00:21 INFO -
14:00:21 INFO - GECKO(6028) | #18: ??? (???:???)
14:00:22 INFO - GECKO(6028) | Exiting due to channel error.
14:00:22 INFO - GECKO(6028) | Exiting due to channel error.
14:00:22 INFO - GECKO(6028) | [GPU 1152, Main Thread] WARNING: Shutting
14:00:22 INFO - GECKO(6028) | ###!!! [Parent][MessageChannel] Error: (msgtype=0x34000B,name=PCompositorWidget::Msg_UnobserveVsync) Channel error: cannot send/recv
14:00:22 INFO - GECKO(6028) | down GPU process early due to a crash!: file z:/build/build/src/gfx/ipc/GPUParent.cpp, line 472
14:00:22 INFO - GECKO(6028) | Exiting due to channel error.
14:00:22 INFO - GECKO(6028) | Exiting due to channel error.
14:00:22 INFO - GECKO(6028) | Exiting due to channel error.
14:00:22 INFO - GECKO(6028) | Exiting due to channel error.
14:00:22 INFO - GECKO(6028) | Exiting due to channel error.
14:00:22 INFO - GECKO(6028) | Exiting due to channel error.
14:00:22 INFO - GECKO(6028) | Exiting due to channel error.
14:00:22 INFO - TEST-INFO | Main app process: exit 1
14:00:22 ERROR - TEST-UNEXPECTED-FAIL | ShutdownLeaks | process() called before end of test suite
14:00:22 INFO - Buffered messages logged at 14:00:21
14:00:22 INFO - Entering test bound
14:00:22 INFO - TEST-PASS | browser/base/content/test/tabs/browser_tabReorder.js | new tabs are opened -

This looks to be a regression from Bug 1535788. Emilio, could you please take a look?

Flags: needinfo?(emilio)

Yes, will take a look.

Assignee: nobody → emilio
Priority: -- → P2
Regressed by: 1535788
Keywords: regression

This preserves the behavior of not having FontFace objects for @font-face rules
in display: none iframes.

Note, however that we may want to always track stylesheets to both not have this
limitation and to fix bug 1471231 & co. But that's a separate bug in any case.

The assertion that is failing ultimately in this bug is not really relevant
anymore, so remove it while at it.

Flags: needinfo?(emilio)
See Also: → 1541952
Attachment #9055917 - Attachment description: Bug 1541925 - Avoid accounting for @font-face rules the style set when there's no pres shell. r=heycam → Bug 1541925 - Avoid accounting for @font-face rules from the style set when there's no pres shell. r=heycam
Attachment #9055917 - Attachment description: Bug 1541925 - Avoid accounting for @font-face rules from the style set when there's no pres shell. r=heycam → Bug 1541925 - Avoid accounting for @font-face rules the style set when there's no pres shell. r=heycam
Pushed by ealvarez@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/1b9a86e36a4c
Avoid accounting for @font-face rules the style set when there's no pres shell. r=heycam
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla68
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: